# reformed-baptist-1689-bible-expert

./: .dockerignore  .gitignore  Dockerfile  README.md  Reformed_Baptist_1689_Bible_Expert_v3_0_12B_i1_GGUF.ipynb  client_example.py  model-settings.json  models.py  pyproject.toml  requirements.txt  settings.json
